[project]
name = "ks-llm-101"
version = "0.1.0"
description = "The fundamentals of LLMs: Chat templates, tool calling, structured output."
readme = "README.md"
authors = [{name = "Vincent Min", email = "vincent.min@b12-consulting.com"}]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.22",
    "langgraph-prebuilt>=0.1.7",
    "openai-agents>=0.0.7",
    "python-dotenv>=1.1.0",
    "transformers>=4.50.3",
]
